--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,19 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
+    }
+}
+
 plugins {
     id 'java'
     id 'com.palantir.git-version' version '0.12.1'
     id "com.github.johnrengelman.shadow" version "7.1.0"
 }
 
-group = 'net.sxlver'
+group = 'net.sxlver.eventlibrary'
 version = 'v0.1-alpha'
 
 subprojects {
