--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,3 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
-    }
-}
-
 plugins {
     id 'java'
     id 'com.palantir.git-version' version '0.12.1'
@@ -14,7 +5,7 @@ plugins {
 }
 
 group = 'net.sxlver.eventlibrary'
-version = 'v0.1-alpha'
+version = '0.0.1'
 
 subprojects {
     apply plugin: 'java'
